...
            case .kami: "👑"
            }
        }

        var label: String {
            switch self {
            case .arigatou: "ありがとう"
            case .saikou: "最高"
            case .tasukatta: "たすかった"
            case .suki: "すき"
            case .kami: "神"
            }
        }
...
